Bug 416610 - plugins-impex-KisSvgTest (Failed)
Summary: plugins-impex-KisSvgTest (Failed)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Unittests (show other bugs)
Version: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-22 15:07 UTC by Halla Rempt
Modified: 2022-08-09 08:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Halla Rempt 2020-01-22 15:07:43 UTC
262/285 Testing: plugins-impex-KisSvgTest
262/285 Test: plugins-impex-KisSvgTest
Command: "/home/boud/dev/b-krita/plugins/impex/svg/tests/KisSvgTest"
Directory: /home/boud/dev/b-krita/plugins/impex/svg/tests
"plugins-impex-KisSvgTest" start time: Jan 22 15:25 CET
Output:
----------------------------------------------------------
********* Start testing of KisSvgTest *********
Config: Using QtTest library 5.13.2, Qt 5.13.2 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 7.4.0)
PASS   : KisSvgTest::initTestCase()
QDEBUG : KisSvgTest::testFiles() "."
QDEBUG : KisSvgTest::testFiles() ".."
QDEBUG : KisSvgTest::testFiles() "official_gnu.svg"
QWARN  : KisSvgTest::testFiles() KoColor debug runtime checks are active.
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(0,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 1 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(1,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 2 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(2,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 3 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(3,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 4 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(4,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 5 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(5,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 6 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(6,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 7 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(7,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 8 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(8,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 9 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(9,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 10 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(10,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 11 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(11,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 12 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(12,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 13 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(13,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 14 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(14,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 15 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(15,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 16 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(16,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 17 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(17,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 18 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(18,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 19 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(19,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 20 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(20,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 21 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(21,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 22 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(22,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 23 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(23,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 24 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(24,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 25 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(25,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 26 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(26,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 27 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(27,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 28 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(28,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 29 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(29,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 30 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(30,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 31 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(31,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 32 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(32,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 33 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(33,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 34 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(34,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 35 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(35,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 36 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(36,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 37 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(37,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 38 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(38,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 39 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(39,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 40 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(40,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 41 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(41,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 42 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(42,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 43 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(43,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 44 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(44,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 45 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(45,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 46 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(46,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 47 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(47,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 48 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(48,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 49 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(49,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 50 of 50 allowed )
QDEBUG : KisSvgTest::testFiles()  Different at QPoint(50,0) source 0 0 0 0 dest 255 255 255 255 fuzzy 30 fuzzyAlpha 30 ( 51 of 50 allowed )
QWARN  : KisSvgTest::testFiles() Comparison failures:  ("official_gnu.svg: Pixel (50,0) has different values")
QWARN  : KisSvgTest::testFiles() No image failures:  ()
QWARN  : KisSvgTest::testFiles() No comparison image:  ()
FAIL!  : KisSvgTest::testFiles() Failed testing files
   Loc: [/home/boud/dev/krita/sdk/tests/filestest.h(118)]
QDEBUG : KisSvgTest::testImportFromWriteonly() Entering "TestUtil::prepareFile()" QFlags(0x2|0x4|0x20|0x40|0x200|0x400|0x2000|0x4000)
QDEBUG : KisSvgTest::testImportFromWriteonly() import result =  Cannot read:  5   "Cannot open file for reading. Reason: The file could not be opened."
PASS   : KisSvgTest::testImportFromWriteonly()
QDEBUG : KisSvgTest::testImportIncorrectFormat() Entering "TestUtil::prepareFile()" QFlags(0x4|0x40|0x200|0x400|0x2000|0x4000)
QSYSTEM: KisSvgTest::testImportIncorrectFormat() krita.general: Parsing error in  contents.svg ! Aborting! 
 In line:  1 , column:  1 
 Error message:  "unexpected end of file" 

QSYSTEM: KisSvgTest::testImportIncorrectFormat() krita.general: "Parsing error in the main document at line 1, column 1\nError message: unexpected end of file"
QDEBUG : KisSvgTest::testImportIncorrectFormat() import result =  Error code =  13   "The action has been completed successfully."
FAIL!  : KisSvgTest::testImportIncorrectFormat() '!status.isOk()' returned FALSE. ()
   Loc: [/home/boud/dev/krita/sdk/tests/filestest.h(289)]
PASS   : KisSvgTest::cleanupTestCase()
Totals: 3 passed, 2 failed, 0 skipped, 0 blacklisted, 2158ms
********* Finished testing of KisSvgTest *********
krita.general: Warning: some tiles have leaked:
krita.general: 	Tiles in memory: 102 
 	Total tiles: 102
<end of output>
Test time =   2.23 sec
----------------------------------------------------------
Test Failed.
"plugins-impex-KisSvgTest" end time: Jan 22 15:25 CET
"plugins-impex-KisSvgTest" time elapsed: 00:00:02
----------------------------------------------------------
Comment 1 Halla Rempt 2022-08-09 08:33:28 UTC
Git commit 5f74a8b7bff03683f28200917f6d600084ef3d5b by Halla Rempt.
Committed on 09/08/2022 at 08:33.
Pushed by rempt into branch 'master'.

Add error reporting to KisShapeLayer::createShapesFromSvg

This unbreaks the svg import test

M  +7    -2    libs/ui/flake/kis_shape_layer.cc
M  +2    -1    libs/ui/flake/kis_shape_layer.h
M  +11   -1    plugins/impex/svg/kis_svg_import.cc

https://invent.kde.org/graphics/krita/commit/5f74a8b7bff03683f28200917f6d600084ef3d5b