Add error reporting to KisShapeLayer::createShapesFromSvg

This unbreaks the svg import test

BUG:416610